# container-example

./: .gitignore  Cargo.toml  bench-get.sh  bench-post.sh  bootstrap.sh  combo_service.Dockerfile  docker-compose.yaml  entity_microservice.Dockerfile  fake_app.Dockerfile  filter-logs.sh  get-log-follow.sh  get-log.sh  init-sqldb.sh  list-logs.sh  log_process.ksql  logging-processor.Dockerfile  logging_processor.Dockerfile  message(1).txt  property_microservice.Dockerfile  start.sh  stop.sh  struct.json  tmp_env.sh  watch-ms.sh
bootstrap/: logging_processor_bootstrap.sh
combo_service/: biz_router.rs  main.rs
dockerfiles/: combo_service.Dockerfile  entity_microservice.Dockerfile  init.Dockerfile  logging_processor.Dockerfile  property_microservice.Dockerfile  proxy_handler.Dockerfile
entity_microservice/: biz_router.rs  main.rs
fake/: Dockerfile
fake_app/: main.py
init/: init.sh
log_example/: another_log.json  example.delete.json  filter.sh  list.sh  log.json  out.json
logging-processor/: main.rs
logging_processor/: main.rs
property_microservice/: biz_router.rs
proxy_handler/: biz_router.rs  handlers.rs  main.rs  util.rs
requests/combo/: delete.http  get.http  patch.http  post.http
requests/combo/entity/: delete.http  (+3 more)
requests/entity/: delete.http  get.http  patch.http  post.http
requests/property/: delete.http  get.http  patch.http  post.http
requests/proxy/: get.http  patch.http  post.http
shared/: header_helper.rs  init.rs  layer.rs  lib.rs  result.rs  trace.rs  util_router.rs
shared/state/: combo.rs  entity.rs  mod.rs  property.rs
(+8 files in other folders)
