[package]
name = "rust-tail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rdkafka = { version = "0.36.0", features = ["tracing"] }
tokio = { version = "1.34.0", features = ["full", "io-util", "tracing"] }

[[bin]]
name = "logging-processor"
path = "logging-processor/main.rs"